--- a/helafix_mobile_app/pubspec.yaml
+++ b/helafix_mobile_app/pubspec.yaml
@@ -64,8 +64,13 @@ flutter:
     - assets/images/logo_bg_light.png
     - assets/images/logo_bg_dark.png
     - assets/images/google.png
-    - assets/images/logo-dark.png
-    - assets/images/logo-light.png
+    - assets/images/Logo-dark.png
+    - assets/images/Logo-light.png
+    - assets/images/cleaning.png
+    - assets/images/maintenance.png
+    - assets/images/pet.png
+    - assets/images/repair.png
+    - assets/images/exone.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
