--- a/helafix_mobile_app/pubspec.yaml
+++ b/helafix_mobile_app/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/images/logo_bg_light.png
     - assets/images/logo_bg_dark.png
     - assets/images/google.png
+    - assets/images/users/user-1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
