--- a/helafix_mobile_app/pubspec.yaml
+++ b/helafix_mobile_app/pubspec.yaml
@@ -69,11 +69,7 @@ flutter:
     - assets/images/logo_dark.png
     - assets/images/google.png
     - assets/images/users/user-1.png
-    - assets/images/cleaning.png
-    - assets/images/maintenance.png
-    - assets/images/pet.png
-    - assets/images/repair.png
-    - assets/images/exone.jpg
+    - assets/images/damro_logo.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
