--- a/helafix_mobile_app/pubspec.yaml
+++ b/helafix_mobile_app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^1.0.7
+  flutter_spinkit: ^5.2.0
 
 
 
@@ -70,6 +71,8 @@ flutter:
     - assets/images/google.png
     - assets/images/users/user-1.png
     - assets/images/damro_logo.jpg
+    - assets/images/check.png
+    - assets/images/cross.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
