--- a/helafix_mobile_app/pubspec.yaml
+++ b/helafix_mobile_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   image_picker: ^1.0.7
   flutter_spinkit: ^5.2.0
+  flutter_rating_bar: ^4.0.0
 
 
 
@@ -73,6 +74,9 @@ flutter:
     - assets/images/damro_logo.jpg
     - assets/images/check.png
     - assets/images/cross.png
+    - assets/images/Americanexpress.png
+    - assets/images/Master-card.png
+    - assets/images/Visa-card.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
