--- a/helafix_mobile_app/pubspec.yaml
+++ b/helafix_mobile_app/pubspec.yaml
@@ -77,6 +77,8 @@ flutter:
     - assets/images/Americanexpress.png
     - assets/images/Master-card.png
     - assets/images/Visa-card.png
+    - assets/images/Arpico.webp
+    - assets/images/user.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
