--- a/helafix_mobile_app/android/app/build.gradle
+++ b/helafix_mobile_app/android/app/build.gradle
@@ -21,13 +21,13 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.helafix_mobile_app"
+        applicationId "com.helafix.mobileapp"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        minSdkVersion 21
+        targetSdkVersion 33
+        versionCode 2         // ← increase if updating APK
+        versionName "1.1"
     }
 
     buildTypes {
