--- a/helafix_mobile_app/pubspec.yaml
+++ b/helafix_mobile_app/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/images/restore.png
     - assets/images/user.png
     - assets/images/star.png
+    - assets/images/rating.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
