--- a/helafix_mobile_app/android/build.gradle
+++ b/helafix_mobile_app/android/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.4.2' // Latest version
+    }
+}
+
+
 allprojects {
     repositories {
         google()
