--- a/helafix_mobile_app/pubspec.yaml
+++ b/helafix_mobile_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   geocoding: ^2.1.0
   location: ^5.0.3
+  bcrypt: ^1.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
