--- a/helafix_mobile_app/android/app/build.gradle
+++ b/helafix_mobile_app/android/app/build.gradle
@@ -25,7 +25,7 @@ android {
         applicationId "com.helafix.mobileapp"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 33
         versionCode 2         // ← increase if updating APK
         versionName "1.1"
@@ -47,4 +47,5 @@ flutter {
 dependencies {
   implementation platform('com.google.firebase:firebase-bom:33.13.0')
   implementation 'com.google.firebase:firebase-analytics'
+  implementation 'com.google.firebase:firebase-auth'
 }
