--- a/helafix_mobile_app/pubspec.yaml
+++ b/helafix_mobile_app/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   firebase_core: ^3.13.0
   cloud_firestore: ^5.6.7
   firebase_database: ^11.3.5
+  firebase_auth: ^5.5.2
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -100,7 +102,6 @@ flutter:
     - assets/images/rating.png
     - assets/images/users/user-1.png
     - assets/images/damro_logo.jpg
-    - assets/images/users/user-1.png
     - assets/images/damro_logo.jpg
     - assets/images/check.png
     - assets/images/cross.png
@@ -112,6 +113,8 @@ flutter:
     - assets/images/cleaning.png
     - assets/images/maintenance.png
     - assets/images/repair.png
+
+    - assets/images/users/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
