--- a/helafix_mobile_app/android/local.properties
+++ b/helafix_mobile_app/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/binodperera/Library/Android/sdk
-flutter.sdk=/Users/binodperera/development/flutter
+sdk.dir=C:\\Users\\oshan\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter_windows_3.27.2-stable\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
