--- a/helafix_mobile_app/pubspec.yaml
+++ b/helafix_mobile_app/pubspec.yaml
@@ -117,6 +117,7 @@ flutter:
     - assets/images/repair.png
 
     - assets/images/users/
+    - assets/images/system/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
