--- a/helafix_mobile_app/android/local.properties
+++ b/helafix_mobile_app/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\sandi\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Flutter\\flutter
+sdk.dir=/Users/binodperera/Library/Android/sdk
+flutter.sdk=/Users/binodperera/development/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
