--- a/helafix_mobile_app/pubspec.yaml
+++ b/helafix_mobile_app/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_auth: ^5.5.2
   google_sign_in: ^6.1.0
   firebase_storage: ^12.4.5
+  url_launcher: ^6.2.1
 
 
 dev_dependencies:
